# rfirr

./: README.md  README.rst  __init__.py  config.json  detect_device.py  irrigation.service  main.py  pyproject.toml  rpc_examples.sh  run_screen.sh  sample_crontab.txt
rfirr/: adc.py  config.py  db.py  file_line_commenter.py  inside.py  moisture_digital.py  outside.py  rf.py  scheduling.py  send_rf.py  sensors.py  service.py
tests/: conftest.py  pyfakefs.txt  test_db.py  test_inside.py  test_outside.py  test_rfirr.py  test_scheduling.py  test_service.py
